// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectArrow rendering renders expected elements 1`] = `
<ChevronDown
  className="SelectArrow TestClass"
/>
`;

exports[`SelectArrow rendering renders expected elements when open is set 1`] = `
<ChevronDown
  className="SelectArrow SelectArrow--open TestClass"
/>
`;
